[package]
name = "yaioum"
version = "0.1.0"
authors = ["David Teller <D.O.Teller@gmail.com>"]
description = "Yet Another Implementation Of Units Of Measure. Extensible, strongly-typed units of measure, with a custom type system (based on F#'s unit of measures) implemented as a linter."

[dependencies]
[dev-dependencies]